# vodoo

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  latest  mkdocs.yml  pyproject.toml  versions.json  vodoo.sh
.github/workflows/: ci.yml  docs.yml  publish.yml
2.0.1/: 404.html  index.html  objects.inv  sitemap.xml
2.0.1/INTEGRATION_TESTS/: index.html
2.0.1/SECURITY/: index.html
2.0.1/api/: index.html
2.0.1/api/async/: index.html
2.0.1/api/auth/: index.html
2.0.1/api/base/: index.html
2.0.1/api/client/: index.html
2.0.1/api/config/: index.html
2.0.1/api/crm/: index.html
2.0.1/api/exceptions/: index.html
2.0.1/api/generic/: index.html
2.0.1/api/helpdesk/: index.html
2.0.1/api/knowledge/: index.html
2.0.1/api/project/: index.html
2.0.1/cli/: index.html
2.0.2.dev1+gf87289d5c/: 404.html  index.html  sitemap.xml
2.0.2.dev1+gf87289d5c/INTEGRATION_TESTS/: index.html
2.0.2.dev1+gf87289d5c/SECURITY/: index.html
2.0.2.dev1+gf87289d5c/api/: index.html
2.0.2.dev1+gf87289d5c/cli/: index.html
2.0.2.dev1+gf87289d5c/search/: search_index.json
3.0.0/: 404.html  index.html  objects.inv  sitemap.xml
3.0.0/INTEGRATION_TESTS/: index.html
3.0.0/SECURITY/: index.html
3.0.0/api/: index.html
3.0.0/cli/: index.html
3.0.0/search/: search_index.json
docs/: INTEGRATION_TESTS.md  SECURITY.md  index.md
docs/api/: async.md  auth.md  base.md  client.md  config.md  crm.md  exceptions.md  generic.md  helpdesk.md  index.md  knowledge.md  project.md  project_project.md  project_tasks.md  projects.md  security.md  timer.md  transport.md
docs/cli/: account-move.md  config.md  crm.md  helpdesk.md  index.md  knowledge.md  model.md  project-task.md  project.md  security.md  timer.md
docs/development/: architecture.md  contributing.md  integration-tests.md  security.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/guide/: ai-assistants.md  library.md
scripts/: gen_cli_docs.py
src/vodoo/: __init__.py  _domain.py  account_moves.py  auth.py  base.py  client.py  config.py  content.py  crm.py  exceptions.py  fields.py  generic.py  helpdesk.py  knowledge.py  main.py  project.py  project_project.py  project_tasks.py  projects.py  security.py  timer.py  transport.py
tests/: test_account_moves.py  test_config.py  test_content.py  test_exceptions.py  test_fields.py  test_knowledge.py  test_retry.py  test_timer.py  test_transport.py
tests/integration/: Dockerfile.enterprise  conftest.py  docker-compose.yml  odoo-enterprise.conf  odoo.conf  run.sh  setup_odoo.py  test_async_suite.py  test_suite.py  test_timer_ui.py
(+141 files in other folders)
