[project]
name = "vodoo"
dynamic = ["version"]
description = "Modern Python CLI for Odoo with support for helpdesk, projects, tasks, CRM, and knowledge articles"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Julian Rath", email = "julian.rath@gmail.com" }
]
maintainers = [
    { name = "Julian Rath", email = "julian.rath@gmail.com" }
]
requires-python = ">=3.12"
keywords = ["odoo", "helpdesk", "project", "task", "crm", "lead", "opportunity", "knowledge", "wiki", "cli", "management", "jsonrpc", "vodoo"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-dotenv>=1.0.0",
    "markdown>=3.5.0",
    "httpx>=0.27.0",
    "typer[all]>=0.12.0",
    "rich>=13.7.0",
]

[project.urls]
Homepage = "https://github.com/julian-r/vodoo"
Documentation = "https://julian-r.github.io/vodoo"
Repository = "https://github.com/julian-r/vodoo"
Issues = "https://github.com/julian-r/vodoo/issues"

[project.scripts]
vodoo = "vodoo.main:app"

[project.optional-dependencies]
dev = [
    "mypy>=1.11.0",
    "ruff>=0.6.0",
    "types-Markdown>=3.5.0",
    "pytest>=8.0.0",
    "pytest-playwright>=0.6.0",
]
docs = [
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.27.0",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.0",
    "mike>=2.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "C4", "DTZ", "T10", "ICN", "PIE", "PT", "RET", "SIM", "ARG", "PTH", "PD", "PLE", "PLR", "PLW", "RUF"]
ignore = ["PLR0913", "PLR2004"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_equality = true

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/vodoo/_version.py"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"
